syntax = "proto3";
package pb;

option go_package = "services/joblisting/pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// ------------ Joblisting Service ------------

service JoblistingService {
    /* --------------- Joblisting --------------- */

    rpc CreateJoblisting(CreateJoblistingRequest) returns (Joblisting) {
        option (google.api.http) = { 
            post: "/v1/joblistings" 
            body: "*"
        };
    };
    rpc GetAllJoblistings(GetAllJoblistingsRequest) returns (GetAllJoblistingsResponse) {
        option (google.api.http) = { get: "/v1/joblistings" };
    };
    rpc GetJoblistingByID(GetJoblistingByIDRequest) returns (Joblisting) {
        option (google.api.http) = { get: "/v1/joblistings/{id}" };
    };
    rpc UpdateJoblisting(UpdateJoblistingRequest) returns (Joblisting) {
        option (google.api.http) = { 
            put: "/v1/joblistings/{id}" 
            body: "joblisting"
        };
    };
    rpc DeleteJoblisting(DeleteJoblistingRequest) returns (DeleteJoblistingResponse) {
        option (google.api.http) = { delete: "/v1/joblistings/{id}" };
    };

    rpc ScanJoblisting(ScanJoblistingRequest) returns (ScanJoblistingResponse) {
        option (google.api.http) = { post: "/v1/joblistings/{id}/scan" };
    };

    /* --------------- Candidate Joblisting --------------- */

    rpc CreateCandidateJoblisting(CreateCandidateJoblistingRequest) returns (CreateCandidateJoblistingResponse) {
        option (google.api.http) = { 
            post: "/v1/candidatejoblistings" 
            body: "candidate_joblisting"
        };
    };
    rpc DeleteCandidateJoblisting(DeleteCandidateJoblistingRequest) returns (DeleteCandidateJoblistingResponse) {
        option (google.api.http) = { delete: "/v1/candidatejoblistings/{id}" };
    };

    /* --------------- Rating --------------- */

    rpc CreateRating(CreateRatingRequest) returns (CreateRatingResponse) {
        option (google.api.http) = { 
            post: "/v1/joblistingratings" 
            body: "rating"
        };
    };
    rpc DeleteRating(DeleteRatingRequest) returns (DeleteRatingResponse) {
        option (google.api.http) = { delete: "/v1/joblistingratings/{id}" };
    };
}


/* --------------- Joblisting --------------- */

message Joblisting {
    uint64 id = 1;
    string name = 2;
    string repo_url = 3;
    repeated Rating ratings = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    google.protobuf.Timestamp deleted_at = 7;
}

message CreateJoblistingRequest {
    Joblisting joblisting = 1;
    uint64 candidate_id = 2;
}

message GetAllJoblistingsRequest {
    repeated uint64 id = 1;
    uint64 candidate_id = 2;
    string name = 3;
    string repo_url = 4;
}

message GetAllJoblistingsResponse {
    repeated Joblisting joblistings = 1;
}

message GetJoblistingByIDRequest {
    uint64 id = 1;
}

message UpdateJoblistingRequest {
    uint64 id = 1;
    Joblisting joblisting = 2;
}

message DeleteJoblistingRequest {
    uint64 id = 1;
}

message DeleteJoblistingResponse {
    // Empty
}

message ScanJoblistingRequest {
    uint64 id = 1;
}

message ScanJoblistingResponse {
    // Empty
}


/* --------------- Candidate Joblisting --------------- */

message CandidateJoblisting {
    uint64 id = 1;
    uint64 candidate_id = 2;
    uint64 joblisting_id = 3;
}

message CreateCandidateJoblistingRequest {
    uint64 candidate_id = 1;
    CandidateJoblisting candidate_joblisting = 2;
}

message CreateCandidateJoblistingResponse {
    // Empty
}

message DeleteCandidateJoblistingRequest {
    uint64 id = 1;
}

message DeleteCandidateJoblistingResponse {
    // Empty
}

/* --------------- Rating --------------- */

message Rating {
    uint64 id = 1;
    uint64 joblisting_id = 2;
	int32 reliability_rating = 3;
	int32 maintainability_rating = 4;
	int32 security_rating = 5;
	int32 security_review_rating = 6;
	float coverage = 7;
	float duplications = 8;
	uint64 lines = 9;
	google.protobuf.Timestamp created_at = 10;
}

message CreateRatingRequest {
    uint64 joblisting_id = 1;
    Rating rating = 2;
}

message CreateRatingResponse {
    // Empty
}

message DeleteRatingRequest {
    uint64 id = 1;
    uint64 joblisting_id = 2;
}

message DeleteRatingResponse {
    // Empty
}